--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,21 +27,25 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
-    implementation 'com.jakewharton:butterknife:8.4.0'
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
